# sdr-telemetry-node

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  ROADMAP.md
.github/workflows/: ci.yml
docker/gateway/: Dockerfile  requirements.txt
docker/icecast/: Dockerfile  entrypoint.sh  (+1 more)
docs/: baseline.md  wall-display.md
scripts/: codegen.sh  fetch-aircraft-db.sh  flash-node-b.md  install-node.sh  node-health.sh  single-node.md  up-single.sh
services/gateway/: pyproject.toml
services/gateway/app/: config.py  engine.py  main.py
services/gateway/app/api/: aircraft.py  errors.py  radio2.py  static.py  tiles.py
services/gateway/app/bus/: mqtt.py
services/gateway/app/enrich/: localdb.py  service.py  staticdata.py
services/gateway/app/ingest/: aisstream.py  readsb.py
services/gateway/app/models/: generated_mqtt.py  generated_ws.py
services/gateway/app/persist/: db.py  sightings.py
services/gateway/app/rules/: interesting.py
services/gateway/app/state/: aircraft.py  geo.py  priority.py  vessels.py
services/gateway/app/ws/: hub.py  server.py
services/gateway/tests/: test_config.py  test_contracts.py  test_engine_p5.py  test_enrich.py  test_persist.py  test_radio2_api.py  test_rules.py  test_smoke.py  test_state.py  test_tiles.py  test_vessels.py  test_ws_flow.py
services/radio2/: pyproject.toml
services/radio2/app/: config.py  decoders.py  fsm.py  main.py  proc.py  publish.py  rtl_airband.py  supervisor.py
services/radio2/app/scheduler/: blocks.py  decision.py  passes.py  tle.py
services/radio2/tests/: test_blocks_decision.py  test_fsm.py  test_passes.py  test_proc.py  test_rtl_airband.py  test_smoke.py  test_supervisor.py
services/radio2/tests/fakes/: fake_decoder.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+57 files in other folders)
